REGRESSION (r51644): WebCore/manual-tests/linkjump-1.html fails <rdar://problem/7595694> and https://bugs.webkit.org/show_bug.cgi?id=34550

Reviewed by Alexey Proskuryakov.

WebCore:

Tests: fast/loader/document-with-fragment-url-1.html
       fast/loader/document-with-fragment-url-2.html
       fast/loader/document-with-fragment-url-3.html
       fast/loader/document-with-fragment-url-4.html

* platform/KURL.cpp:
(WebCore::KURL::init): When resolving new URL from an empty reference relative to an absolute URL,
  any fragment identifier from the absolute URL should be removed from the resulting resolution.

LayoutTests:

* fast/loader/document-with-fragment-url-1-expected.txt: Added.
* fast/loader/document-with-fragment-url-1.html: Added.
* fast/loader/document-with-fragment-url-2-expected.txt: Added.
* fast/loader/document-with-fragment-url-2.html: Added.
* fast/loader/document-with-fragment-url-3-expected.txt: Added.
* fast/loader/document-with-fragment-url-3.html: Added.
* fast/loader/document-with-fragment-url-4-expected.txt: Added.
* fast/loader/document-with-fragment-url-4.html: Added.
* fast/loader/resources/document-with-fragment-url-test.html: Added.



Canonical link: https://commits.webkit.org/45657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54321 268f45cc-cd09-0410-ab3c-d52691b4dbfc